objects/nFORCE__Feature_Process__mdt.object
<CustomObject>
    <description>The object defines the Apex processes that are associated with a feature.</description>
    <fields>
        <fullName>nFORCE__Class_Handler__c</fullName>
        <description>This field is optional. The class handler indicates how to execute the process. It must be specified if the Class does not implement nFORCE.ALifeCycleDataProvider or Database.Batchable.</description>
        <label>Class Handler</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Class__c</fullName>
        <description>This field is required. It specifies the fully qualified Apex class name of the process associated with the feature.</description>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>The field contains a short paragraph describing the function of the feature process.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Execution_Sequence__c</fullName>
        <description>This field is required. It specifies the order in which processes associated with the feature will be executed.</description>
        <label>Execution Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Execution_Type__c</fullName>
        <description>The field is mandatory. It indicates when the process should be executed.</description>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                    <default>true</default>
                    <label>Always</label>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Once Per Version</fullName>
                </value>
                <value>
                    <fullName>Manual Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Feature__c</fullName>
        <description>This field is required. It specifies feature to which this process belongs.</description>
        <label>Feature</label>
        <referenceTo>nFORCE__Feature__mdt</referenceTo>
        <relationshipLabel>Feature Processes</relationshipLabel>
        <relationshipName>Feature_Processes</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nFORCE__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the process is required and must be executed when the associated feature action is performed. The execution type of a required process cannot be changed to &apos;Manual Only&apos;.</description>
        <label>Required Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>This field is required. It specifies the process type. The type is used to determine during which actions the process will be executed.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enable</fullName>
                    <default>true</default>
                    <label>Enable</label>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Version__c</fullName>
        <description>This field is required. It specifies the version number of the process. A change in version number implies a change in the process behavior.</description>
        <label>Version</label>
        <precision>8</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Feature Process</label>
    <pluralLabel>Feature Processes</pluralLabel>
</CustomObject>